examples/test/testpolicy7032.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7032
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key26: value3
      key12: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value39
          key18: value44
          key44: value40
      podSelector:
        matchLabels:
          key29: value22
          key33: value26
          key30: value14
